--- a/BookLoop/assets/css/main.css
+++ b/BookLoop/assets/css/main.css
@@ -22,5 +22,10 @@
 
 .font-satoshi-medium {
   font-family: 'Satoshi', sans-serif;
-  /* font-weight: 500; */
+  font-weight: 500;
+}
+
+.font-cabinet-grotesk {
+  font-family: 'Cabinet Grotesk', sans-serif;
+  font-weight: 800;
 }
